--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ios": "npx expo start --ios",
     "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "eject": "npx expo eject",
+    "amplify:S3Trigger14f1cefa":"cd amplify/backend/function/S3Trigger14f1cefa/src && rm -rf node_modules/sharp && SHARP_IGNORE_GLOBAL_LIBVIPS=1 npm install --arch=x64 --platform=linux sharp",
     "test": "START_SERVER_AND_TEST_INSECURE=1 start-server-and-test start:web http://localhost:19006 cy:open",
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1 --profile=amplify"
   },
