--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -114,7 +114,8 @@
     "jcmobilePreTokenGeneration": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": []
     },
     "jcmobileStripWebhook": {
       "build": true,
