--- a/package.json
+++ b/package.json
@@ -84,6 +84,15 @@
     "universal-cookie": "^4.0.3",
     "zen-observable-ts": "^0.8.21"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx,html,css,scss,md}": "prettier --write"
+  },
   "private": true,
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -112,8 +121,11 @@
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
     "expo-cli": "^4.1.3",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
+    "prettier": "^2.2.1",
     "start-server-and-test": "^1.11.0",
     "typescript": "~4.0.0",
     "webpack-bundle-analyzer": "^3.6.1",
