--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "cypress-file-upload": "^3.5.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^7.3.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.0",
     "expo-cli": "^4.1.3",
     "husky": "^4.3.8",
