--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -10,6 +10,17 @@ projects:
         codeGenTarget: typescript
         generatedFileName: src/API.ts
         docsFilePath: src/graphql
+  messageboard:
+    schemaPath: src/graphql/schema.json
+    includes:
+      - src/graphql-custom/messages.ts
+    excludes:
+      - ./amplify/**
+    extensions:
+      amplify:
+        codeGenTarget: typescript
+        generatedFileName: src/API-messages.ts
+        docsFilePath: src/graphql
 extensions:
   amplify:
     version: 3
