--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "~7.12.13",
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.4.5",
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/webpack-preprocessor": "^5.5.0",
     "@expo/webpack-config": "~0.12.58",
@@ -114,11 +115,12 @@
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "aws-sdk": "^2.704.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "cypress": "6.4.0",
-    "cypress-file-upload": "^3.5.3",
+    "cypress-file-upload": "^5.0.2",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^7.3.1",
     "eslint-plugin-prettier": "^3.3.1",
@@ -131,6 +133,7 @@
     "prettier": "^2.2.1",
     "start-server-and-test": "^1.11.0",
     "typescript": "~4.0.0",
+    "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-merge": "^5.1.2"
