Courses: TS improvements, refactoring

--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -21,6 +21,17 @@ projects:
         codeGenTarget: typescript
         generatedFileName: src/API-messages.ts
         docsFilePath: src/graphql
+  courses:
+    schemaPath: src/graphql/schema.json
+    includes:
+      - src/graphql-custom/courses.ts
+    excludes:
+      - ./amplify/**
+    extensions:
+      amplify:
+        codeGenTarget: typescript
+        generatedFileName: src/API-courses.ts
+        docsFilePath: src/graphql
 extensions:
   amplify:
     version: 3
