--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-google-maps": "^9.4.5",
     "react-input-color": "^3.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-calendars": "^1.300.0",
+    "react-native-calendars": "^1.1249.0",
     "react-native-dev-menu": "^4.0.2",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-extended-stylesheet": "^0.12.0",
@@ -110,6 +110,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-calendars": "^1.505.0",
     "@types/react-places-autocomplete": "^7.2.6",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
