--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -32,6 +32,17 @@ projects:
         codeGenTarget: typescript
         generatedFileName: src/API-courses.ts
         docsFilePath: src/graphql
+  CRM:
+    schemaPath: src/graphql/schema.json
+    includes:
+      - src/graphql-custom/crm.ts
+    excludes:
+      - ./amplify/**
+    extensions:
+      amplify:
+        codeGenTarget: typescript
+        generatedFileName: src/API-crm.ts
+        docsFilePath: src/graphql
 extensions:
   amplify:
     version: 3
