Add Help Function

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -295,6 +295,11 @@
           ]
         }
       ]
+    },
+    "jcmobileSendHelpRequest": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "auth": {
