--- a/app.json
+++ b/app.json
@@ -3,11 +3,8 @@
     "name": "Jesus Collective",
     "slug": "JesusCollective",
     "privacy": "public",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
+    "owner": "georgevicbell",
     "scheme": "jc",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -26,9 +23,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.jesuscollective.iosapp",
@@ -40,9 +35,7 @@
     },
     "web": {
       "babel": {
-        "include": [
-          "aws-amplify-react-native"
-        ]
+        "include": ["aws-amplify-react-native"]
       }
     }
   }
