--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start",
     "start:web": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start:web",
     "testWeb": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start:web",
-    "buildExpo": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;sentry-cli releases new -p jesus-collective $VERSION;sentry-cli releases set-commits --auto $VERSION;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;expo build:ios -t archive;expo build:android -t apk;sentry-cli releases finalize $VERSION;sentry-cli releases deploys $VERSION new -e prod;",
+    "buildExpo": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;sentry-cli releases new -p jesus-collective $VERSION;sentry-cli releases set-commits --auto $VERSION;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;expo build:ios -t archive;expo build:android -t apk;sentry-cli releases finalize $VERSION;sentry-cli releases deploys $VERSION new -e prod;curl --header 'Content-Type: application/json' --request POST --data '{\"content\":\"Published a new version of app from commit: '$VERSION'\"}' $DISCORD_WEBHOOK_JC",
     "debug": "npx expo start",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
@@ -14,6 +14,7 @@
     "ios": "npx expo start --ios",
     "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "eject": "npx expo eject",
+    "publish": "COMMIT=`git rev-parse --short HEAD`;amplify publish -c;curl --header 'Content-Type: application/json' --request POST --data '{\"content\":\"Published a new version of web from commit: '$COMMIT'\"}' $DISCORD_WEBHOOK_JC",
     "amplify:S3Trigger14f1cefa": "cd amplify/backend/function/S3Trigger14f1cefa/src && rm -rf node_modules/sharp && SHARP_IGNORE_GLOBAL_LIBVIPS=1 npm install --arch=x64 --platform=linux sharp",
     "test": "START_SERVER_AND_TEST_INSECURE=1 start-server-and-test start:web http://localhost:19006 cy:open",
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1 --profile=amplify"
