--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
     "**/node_modules/*",
     "**/native-base-theme/*",
     "native-base-theme",
-    "native-base-theme/components/index.js"
+    "native-base-theme/components/index.js",
+    "native-base-theme/components/*.js",
+    "native-base-theme/variables/*.js",
+    "**/*.native.tsx"
   ]
 }
