--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "prepare": "husky install",
     "prebuild": "npx amplify push",
     "build": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;sentry-cli releases new -p jesus-collective $VERSION;sentry-cli releases set-commits --auto $VERSION;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo build:web;sentry-cli releases finalize $VERSION;sentry-cli releases deploys $VERSION new -e beta;",
     "start": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start",
@@ -21,8 +22,8 @@
   },
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.10.2",
     "@material-ui/pickers": "^3.2.10",
     "@react-native-community/async-storage": "~1.12.0",
@@ -43,9 +44,9 @@
     "babel-preset-expo": "8.3.0",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
-    "emotion-theming": "^10.0.27",
+    "emotion-theming": "^11.0.0",
     "expo": "^40.0.0",
-    "expo-camera": "~9.1.0",
+    "expo-camera": "^10.0.0",
     "expo-permissions": "~10.0.0",
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^3.0.3",
@@ -55,7 +56,7 @@
     "native-base": "^2.13.1",
     "react": "16.13.1",
     "react-chips": "^0.8.0",
-    "react-datepicker": "^2.14.1",
+    "react-datepicker": "^3.6.0",
     "react-device-detect": "^1.14.0",
     "react-dom": "16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
@@ -78,7 +79,7 @@
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "~0.13.12",
-    "react-native-web-maps": "^0.2.0",
+    "react-native-web-maps": "^0.3.0",
     "react-places-autocomplete": "^7.2.1",
     "react-tooltip": "^4.2.7",
     "request": "^2.88.2",
@@ -108,7 +109,7 @@
     "@types/draft-js": "^0.10.44",
     "@types/googlemaps": "^3.39.8",
     "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
+    "@types/react-dom": "^17.0.2",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-native": "~0.63.2",
     "@types/react-native-calendars": "^1.505.0",
@@ -128,13 +129,13 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.0",
     "expo-cli": "^4.1.6",
-    "husky": "^4.3.8",
+    "husky": "^5.1.3",
     "lint-staged": "^10.5.3",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
     "start-server-and-test": "^1.11.0",
-    "typescript": "~4.0.0",
+    "typescript": "^4.2.3",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
