--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-preset-expo": "8.3.0",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "emotion-theming": "^11.0.0",
     "expo": "^40.0.0",
     "expo-camera": "^10.0.0",
@@ -107,6 +108,7 @@
     "@sentry/cli": "^1.55.2",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/draft-js": "^0.10.44",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/googlemaps": "^3.39.8",
     "@types/react": "~16.9.35",
     "@types/react-dom": "^17.0.2",
