--- a/amplify/backend/auth/jcmobile/jcmobile-cloudformation-template.yml
+++ b/amplify/backend/auth/jcmobile/jcmobile-cloudformation-template.yml
@@ -313,6 +313,7 @@ Resources:
       
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
+      SmsAuthenticationMessage: !Ref smsAuthenticationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
         ExternalId: jcmobi44a13962_role_external_id
