--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.10.2",
     "@material-ui/pickers": "^3.2.10",
-    "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.7",
+    "@react-native-community/netinfo": "6.0.0",
     "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
@@ -46,15 +46,16 @@
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "emotion-theming": "^11.0.0",
-    "expo": "^40.0.0",
-    "expo-camera": "^10.0.0",
-    "expo-permissions": "~10.0.0",
+    "expo": "^41.0.0",
+    "expo-camera": "~11.0.2",
+    "expo-linking": "^2.2.3",
+    "expo-permissions": "~12.0.1",
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^3.0.3",
     "jquery": "^3.4.1",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "native-base": "^2.13.1",
+    "native-base": "^2.11.0",
     "react": "16.13.1",
     "react-chips": "^0.8.0",
     "react-datepicker": "^3.6.0",
@@ -63,29 +64,30 @@
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
     "react-input-color": "^3.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-calendars": "^1.1255.0",
     "react-native-dev-menu": "^4.0.2",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~1.9.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "~2.15.2",
+    "react-native-screens": "~3.0.0",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "~0.13.12",
     "react-native-web-maps": "^0.3.0",
+    "react-native-windows": "^0.63.0",
     "react-places-autocomplete": "^7.2.1",
     "react-tooltip": "^4.2.7",
     "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sentry-expo": "^3.0.4",
+    "sentry-expo": "^3.1.0",
     "universal-cookie": "^4.0.3",
     "zen-observable-ts": "^0.8.21"
   },
@@ -104,14 +106,14 @@
     "@babel/preset-env": "^7.4.5",
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/webpack-preprocessor": "^5.5.0",
-    "@expo/webpack-config": "~0.12.58",
+    "@expo/webpack-config": "~0.12.63",
     "@sentry/cli": "^1.55.2",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/draft-js": "^0.10.44",
     "@types/draftjs-to-html": "^0.8.0",
     "@types/googlemaps": "^3.39.8",
     "@types/react": "~16.9.35",
-    "@types/react-dom": "^17.0.2",
+    "@types/react-dom": "~16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-native": "~0.63.2",
     "@types/react-native-calendars": "^1.505.2",
@@ -130,14 +132,14 @@
     "eslint": "^7.3.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "expo-cli": "^4.1.6",
+    "expo-cli": "^4.4.4",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.3",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
     "start-server-and-test": "^1.11.0",
-    "typescript": "^4.2.3",
+    "typescript": "~4.0.0",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
