--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
     "node_modules",
     "**/node_modules/*",
     "**/native-base-theme/*",
+    "native-base-theme/**/*.js",
     "native-base-theme",
     "native-base-theme/components/index.js",
     "native-base-theme/components/*.js",
