--- a/.eslintignore
+++ b/.eslintignore
@@ -13,3 +13,4 @@ src/aws-video-exports.js
 src/types.ts
 rn-cli.config.js
 screens/HomeScreen/NavigationRoot.ts
+components/TestHelpers/TestHelpers.js
