--- a/package.json
+++ b/package.json
@@ -24,72 +24,75 @@
   "dependencies": {
     "@date-io/moment": "^1.3.13",
     "@emotion/core": "^11.0.0",
-    "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^4.10.2",
-    "@material-ui/pickers": "^3.2.10",
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
+    "@react-native-async-storage/async-storage": "~1.15.8",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "6.0.0",
-    "@react-navigation/drawer": "^5.8.4",
-    "@react-navigation/native": "^5.6.1",
-    "@react-navigation/stack": "^5.6.2",
+    "@react-native-community/netinfo": "6.0.2",
+    "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "@sentry/react-native": "^2.2.0",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.11.0",
-    "@zoomus/websdk": "^1.7.8",
+    "@sentry/react-native": "^3.1.0",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
+    "@zoomus/websdk": "^1.9.8",
     "asset": "^0.4.13",
-    "async-mutex": "^0.2.6",
-    "aws-amplify": "^3.3.20",
-    "aws-amplify-react-native": "^4.2.5",
-    "babel-preset-expo": "8.3.0",
+    "async-mutex": "^0.3.2",
+    "aws-amplify": "^4.2.9",
+    "aws-amplify-react-native": "^5.0.3",
+    "babel-preset-expo": "8.4.1",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "emotion-theming": "^11.0.0",
-    "expo": "^41.0.0",
-    "expo-camera": "~11.0.2",
-    "expo-linking": "^2.2.3",
-    "expo-permissions": "~12.0.1",
+    "expo": "^42.0.3",
+    "expo-camera": "~11.2.2",
+    "expo-linking": "~2.3.1",
+    "expo-permissions": "~12.1.1",
     "google-maps-react": "^2.0.6",
-    "is-absolute-url": "^3.0.3",
-    "jquery": "^3.4.1",
+    "is-absolute-url": "^4.0.1",
+    "jquery": "^3.6.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "native-base": "^2.11.0",
     "react": "16.13.1",
     "react-chips": "^0.8.0",
     "react-datepicker": "^3.6.0",
-    "react-device-detect": "^1.14.0",
+    "react-device-detect": "^1.17.0",
     "react-dom": "16.13.1",
-    "react-draft-wysiwyg": "^1.14.4",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-google-maps": "^9.4.5",
     "react-input-color": "^3.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-calendars": "1.1260.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-calendars": "1.1266.0",
     "react-native-dev-menu": "^4.0.2",
-    "react-native-dropdown-picker": "^3.7.1",
+    "react-native-dropdown-picker": "^5.1.27",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-maps": "0.27.1",
+    "react-native-gesture-handler": "~1.10.3",
+    "react-native-maps": "0.29.3",
     "react-native-modal": "^11.5.6",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.2",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.4.0",
     "react-native-scripts": "^2.0.1",
-    "react-native-tags-input": "^1.0.7",
+    "react-native-svg": "12.1.1",
+    "react-native-tags-input": "^1.0.10",
     "react-native-web": "~0.13.12",
     "react-native-web-maps": "^0.3.0",
     "react-native-windows": "^0.63.0",
-    "react-places-autocomplete": "^7.2.1",
-    "react-tooltip": "^4.2.7",
+    "react-places-autocomplete": "^7.3.0",
+    "react-tooltip": "^4.2.21",
     "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sentry-expo": "^3.1.0",
-    "universal-cookie": "^4.0.3",
+    "sentry-expo": "^4.0.1",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5",
+    "universal-cookie": "^4.0.4",
     "zen-observable-ts": "^0.8.21"
   },
   "husky": {
@@ -103,49 +106,47 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.4.5",
-    "@cypress/code-coverage": "^3.8.1",
+    "@babel/core": "~7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@cypress/code-coverage": "^3.9.11",
     "@cypress/webpack-preprocessor": "^5.5.0",
-    "@expo/webpack-config": "~0.12.63",
-    "@sentry/cli": "^1.55.2",
+    "@expo/webpack-config": "~0.15.0",
+    "@sentry/cli": "^1.68.0",
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "@types/draft-js": "^0.10.44",
-    "@types/draftjs-to-html": "^0.8.0",
+    "@types/draft-js": "^0.11.5",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/googlemaps": "^3.39.8",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-draft-wysiwyg": "^1.13.0",
-    "@types/react-native": "~0.63.2",
-    "@types/react-native-calendars": "^1.505.2",
-    "@types/react-places-autocomplete": "^7.2.6",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "aws-sdk": "^2.704.0",
-    "babel-loader": "^8.1.0",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "~17.0.9",
+    "@types/react-draft-wysiwyg": "^1.13.3",
+    "@types/react-native": "~0.65.0",
+    "@types/react-native-calendars": "^1.1264.2",
+    "@types/react-places-autocomplete": "^7.2.8",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "aws-sdk": "^2.989.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "cypress": "^6.5.0",
-    "cypress-file-upload": "^5.0.2",
+    "cypress": "^8.4.0",
+    "cypress-file-upload": "^5.0.8",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
-    "eslint": "^7.3.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.20.0",
-    "expo-cli": "^4.4.4",
-    "graphql": "^15.5.1",
-    "husky": "^5.1.3",
-    "immutable": "^4.0.0-rc.14",
-    "lint-staged": "^10.5.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "expo-cli": "^4.11.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
-    "start-server-and-test": "^1.11.0",
-    "typescript": "~4.0.0",
+    "prettier": "^2.4.0",
+    "start-server-and-test": "^1.14.0",
+    "typescript": "^4.4.3",
     "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-merge": "^5.1.2"
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-merge": "^5.8.0"
   }
 }
