--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-native-async-storage/async-storage": "~1.15.8",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "6.0.2",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
