--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1 --profile=amplify"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@date-io/moment": "^1.3.13",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
@@ -53,6 +55,8 @@
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^4.0.1",
     "jquery": "^3.6.0",
+    "maplibre-gl": "^1.15.2",
+    "maplibre-gl-js-amplify": "^1.1.3",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "native-base": "^2.11.0",
