--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -337,6 +337,25 @@
           ]
         }
       ]
+    },
+    "jcmobileStripListProducts": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "jcmobile",
+          "attributes": [
+            "UserPoolId"
+          ]
+        }
+      ]
+    },
+    "jcmobileShared": {
+      "providerPlugin": "awscloudformation",
+      "service": "LambdaLayer",
+      "build": true
     }
   },
   "auth": {
