--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -344,6 +344,13 @@
       "service": "Lambda",
       "dependsOn": [
         {
+          "category": "function",
+          "resourceName": "jcmobileShared",
+          "attributes": [
+            "Arn"
+          ]
+        },
+        {
           "category": "auth",
           "resourceName": "jcmobile",
           "attributes": [
