--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -501,6 +501,13 @@
       ]
     }
   },
+  "video": {
+    "jesuscollectiveCourses": {
+      "service": "video",
+      "serviceType": "video-on-demand",
+      "providerPlugin": "awscloudformation"
+    }
+  },
   "geo": {
     "jcMap": {
       "isDefault": true,
