--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "amplify:S3Trigger14f1cefa": "cd amplify/backend/function/S3Trigger14f1cefa/src && rm -rf node_modules/sharp && SHARP_IGNORE_GLOBAL_LIBVIPS=1 npm install --arch=x64 --platform=linux sharp",
     "amplify:jcmobilePinpointCleanEndpoints": "cd amplify/backend/function/jcmobilePinpointCleanEndpoints/src && tsc && cd -",
     "amplify:jcmobileShared": "cd amplify/backend/function/jcmobileShared/lib/nodejs && tsc && cd -",
+    "amplify:jcmobileStripCancelSubscription": "cd amplify/backend/function/jcmobileStripCancelSubscription/src && tsc && cd -",
     "amplify:jcmobileStripListProducts": "cd amplify/backend/function/jcmobileStripListProducts/src && tsc && cd -",
+    "amplify:jcmobileStripCreateCustomer": "cd amplify/backend/function/jcmobileStripCreateCustomer/src && tsc && cd -",
+    "amplify:jcmobileStripCreateSubscription": "cd amplify/backend/function/jcmobileStripCreateSubscription/src && tsc && cd -",
+    "amplify:jcmobileStripCreatePaymentIntent": "cd amplify/backend/function/jcmobileStripCreatePaymentIntent/src && tsc && cd -",
+    "amplify:jcmobileStripListInvoices": "cd amplify/backend/function/jcmobileStripListInvoices/src && tsc && cd -",
+    "amplify:jcmobileStripPreviewInvoice": "cd amplify/backend/function/jcmobileStripPreviewInvoice/src && tsc && cd -",
+    "amplify:jcmobileStripWebhook": "cd amplify/backend/function/jcmobileStripWebhook/src && tsc && cd -",
     "test": "START_SERVER_AND_TEST_INSECURE=1 start-server-and-test start:web http://localhost:19006 cy:open",
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1 --profile=amplify"
   },
