--- a/.gitignore
+++ b/.gitignore
@@ -59,22 +59,29 @@ buck-out/
 
 .expo/packager-info.json
 .expo/web
-#amplify
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/mock-data
-amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
-build/
-dist/
-node_modules/
-awsconfiguration.json
-backup/
-.vscode/.react/AppEntry.bundle
-.vscode/.react/AppEntry.map
-
 report.*.json
 coverage/
 
 *.log
 .eslintcache
+
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
