--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "@types/draft-js": "^0.11.5",
     "@types/draftjs-to-html": "^0.8.1",
     "@types/googlemaps": "^3.39.8",
-    "@types/react": "^16.9.35",
+    "@types/react": "~16.9.35",
     "@types/react-dom": "~17.0.9",
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-native": "~0.65.0",
