--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
-    "@react-native-async-storage/async-storage": "~1.15.8",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "6.0.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "@sentry/react-native": "^3.1.0",
+    "@sentry/react-native": "^3.1.1",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "@zoomus/websdk": "^1.9.8",
@@ -53,16 +53,15 @@
     "async-mutex": "^0.3.2",
     "aws-amplify": "^4.2.9",
     "aws-amplify-react-native": "^5.0.3",
-    "babel-preset-expo": "8.4.1",
+    "babel-preset-expo": "~9.1.0",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "emotion-theming": "^11.0.0",
-    "expo": "^42.0.3",
-    "expo-camera": "~11.2.2",
-    "expo-linking": "~2.3.1",
-    "expo-permissions": "~12.1.1",
-    "google-maps-react": "^2.0.6",
+    "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
+    "expo-linking": "~3.1.0",
+    "expo-permissions": "~13.2.0",
     "is-absolute-url": "^4.0.1",
     "jquery": "^3.6.0",
     "maplibre-gl": "^1.15.2",
@@ -70,38 +69,35 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "only-last-promise": "^1.0.0",
-    "react": "16.13.1",
-    "react-chips": "^0.8.0",
+    "react": "17.0.2",
     "react-datepicker": "^3.6.0",
     "react-device-detect": "^1.17.0",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
-    "react-google-maps": "^9.4.5",
-    "react-input-color": "^3.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "0.68.2",
     "react-native-calendars": "1.1266.0",
     "react-native-dev-menu": "^4.0.2",
-    "react-native-dropdown-picker": "^3.7.1",
+    "react-native-dropdown-picker": "^5.4.0",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~1.10.3",
-    "react-native-maps": "0.29.3",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-maps": "0.30.2",
     "react-native-modal": "^11.5.6",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "~2.2.2",
-    "react-native-safe-area-context": "3.2.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.4.0",
+    "react-native-screens": "~3.11.1",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.10",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.7",
     "react-native-web-maps": "^0.3.0",
-    "react-native-windows": "^0.63.0",
+    "react-native-windows": "^0.68.0",
     "react-places-autocomplete": "^7.3.0",
     "react-tooltip": "^4.2.21",
     "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sentry-expo": "^4.0.1",
+    "sentry-expo": "^4.2.0",
     "universal-cookie": "^4.0.4",
     "zen-observable-ts": "^0.8.21"
   },
@@ -116,20 +112,20 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "~7.15.5",
+    "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.15.6",
     "@cypress/code-coverage": "^3.9.11",
     "@cypress/webpack-preprocessor": "^5.5.0",
-    "@expo/webpack-config": "~0.15.0",
-    "@sentry/cli": "^1.68.0",
+    "@expo/webpack-config": "^0.16.27",
+    "@sentry/cli": "^2.5.0",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/draft-js": "^0.11.5",
     "@types/draftjs-to-html": "^0.8.1",
     "@types/googlemaps": "^3.39.8",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~17.0.9",
+    "@types/react": "~17.0.21",
+    "@types/react-dom": "~17.0.11",
     "@types/react-draft-wysiwyg": "^1.13.3",
-    "@types/react-native": "~0.65.0",
+    "@types/react-native": "0.68.2",
     "@types/react-native-calendars": "^1.1264.2",
     "@types/react-places-autocomplete": "^7.2.8",
     "@types/uuid": "^8.3.1",
@@ -145,14 +141,15 @@
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "expo-cli": "^4.11.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "expo-cli": "^6.0.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.4.0",
     "start-server-and-test": "^1.14.0",
-    "typescript": "^4.4.3",
+    "typescript": "~4.3.5",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
