--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-input-color": "^4.0.1",
     "react-native": "0.68.2",
     "react-native-calendars": "1.1266.0",
     "react-native-dev-menu": "^4.0.2",
