--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
   },
   "private": true,
   "devDependencies": {
+    "graphql-ttl-transformer": "^2.0.0",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.15.6",
     "@cypress/code-coverage": "^3.9.11",
